formatando valores de dinheito para real BR

--- a/src/app/casher/casher.component.html
+++ b/src/app/casher/casher.component.html
@@ -45,7 +45,7 @@ matTooltip="Voltar para Home"
           <p>Lucro de hoje:</p>
           <div class="mostrarLucro">
 
-            <h1 style="color: #19a800;">R$: {{showLucroDisplay()}}</h1>
+            <h1 style="color: #19a800;">{{ showValue(showLucro) }}</h1>
           </div>
 
         </div>
