--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -57,7 +57,7 @@
   </mat-drawer>
   <section>
     <mat-grid-list cols="1" rowHeight="3:1.4">
-      <mat-grid-tile><img class="img" src="assets/img/fotoHome.png" alt="foto hortifruti"></mat-grid-tile>
+      <mat-grid-tile><img class="img" src="assets/img/fundoHome.png" alt="foto hortifruti"></mat-grid-tile>
     </mat-grid-list>
   </section>
 </mat-drawer-container>
