--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -15,6 +15,7 @@
     style="justify-content: space-between"
     class="example-icon d-flex"
     aria-label="Example icon-button with share icon"
+    matTooltip="Sair"
   >
     <mat-icon  (click)="logout()" >logout</mat-icon>
   </button>
