--- a/src/app/profit-list/profit-list.component.html
+++ b/src/app/profit-list/profit-list.component.html
@@ -13,7 +13,7 @@
 <body>
   <div class="mat-elevation-z8 container">
     <div class="container-title">
-      <h1 class="title">Lista de Lucros</h1>
+      <h1 class="title">Lista de Faturamentos</h1>
     </div>
     <div>
       <mat-form-field appearance="standard">
@@ -34,7 +34,7 @@
         </ng-container
       >
       <ng-container matColumnDef="lucroDia">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number" >Valor do lucro</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number" >Valor do faturamento</th>
         <td mat-cell *matCellDef="let profit" >{{  showValue(profit.lucroDia) }}</td>
         </ng-container
       >
