--- a/src/app/funcionarios/funcionario-update/funcionario-update/funcionario-update.component.scss
+++ b/src/app/funcionarios/funcionario-update/funcionario-update/funcionario-update.component.scss
@@ -11,7 +11,9 @@
 
 .container-form {
     width: 400px;
-    padding: 5px;
+    background-color: #fff;
+    padding: 1vw;
+    margin-top: 2vh;
 }
 
 .field {
