--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -43,7 +43,7 @@
     routerLink="lista-de-lucros"
     >
       <mat-icon class="icon-sidebar"
-      >receipt_long</mat-icon>Lista de Faturamnetos
+      >receipt_long</mat-icon>Lista de Faturamentos
     </button>
     <button mat-button style="align-items: center; display: flex" routerLink="estatisticas">
       <mat-icon class="icon-sidebar">leaderboard</mat-icon>Estatísticas
